--- a/layoutCss.css
+++ b/layoutCss.css
@@ -1,80 +1,226 @@
-* {
+ {
     box-sizing: border-box;
 }
-table, td, th {
-    border: 1px solid #ddd;
-    text-align: left;
-}
 
-table {
-    border-collapse: collapse;
-    width: 100%;
+body {
+    font-family: Arial;
+    padding: 10px;
+    background: #cce7e8;
 }
-
-th, td {
-    padding: 15px;
-}
-
 
 /* Style of the header */
 .header {
-    background-color: #acbdc5;
     padding: 30px;
     text-align: center;
-    font-size: 35px;
+    background: #B8DCE3;
 }
 
-
-/* Style of the body */
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #b9cdd7;
+.header h1 {
+    font-size: 50px;
 }
 
-/* Style of the side navigation */
-.sidenav {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    /*z-index: 1;
-    top: 0;
-    left: 0;*/
-    background-color: #c5d4e6;
-    overflow-x: hidden;
+/* /* Style of the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #4BB7CA;
 }
 
-
-/* Side navigation links */
-.sidenav a {
-    color: white;
-    padding: 16px;
-    text-decoration: none;
+/* Style of the topnav links */
+.topnav a {
+    float: left;
     display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 /* Change color on hover */
-.sidenav a:hover {
+.topnav a:hover {
     background-color: #ddd;
     color: black;
 }
 
 
-/* Style of the content */
-.content {
-    margin-left: 200px;
-    padding-left: 20px;
+/* style of the Left column */
+.leftcolumn {
+    float: left;
+    width: 75%;
+}
 
+/* style of the Right column */
+.rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+}
+
+/* There is where the content of the page is */
+.content {
+    background-color: #B8DCE3;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 /* Style of the footer */
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;            /* Footer height */
-    background-color: #acbdc5;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
+    background: #4BB7CA;
+    margin-top: 20px;
 }
 
+
+
+/*the CSS for the email form, this was not made by me, credits: https://www.freecontactform.com/form-guides/html-email-form */
+#fcf-form {
+    display:block;
+}
+
+.fcf-body {
+    margin: 0;
+    font-family: -apple-system, Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+    padding: 30px;
+    padding-bottom: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    max-width: 100%;
+}
+
+.fcf-form-group {
+    margin-bottom: 1rem;
+}
+
+.fcf-input-group {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+}
+
+.fcf-form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    outline: none;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.fcf-form-control:focus {
+    border: 1px solid #313131;
+}
+
+select.fcf-form-control[size], select.fcf-form-control[multiple] {
+    height: auto;
+}
+
+textarea.fcf-form-control {
+    font-family: -apple-system, Arial, sans-serif;
+    height: auto;
+}
+
+label.fcf-label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+
+.fcf-btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .fcf-btn {
+        transition: none;
+    }
+}
+
+.fcf-btn:hover {
+    color: #212529;
+    text-decoration: none;
+}
+
+.fcf-btn:focus, .fcf-btn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.fcf-btn-primary {
+    color: #fff;
+    background-color: #00D5FF;
+}
+
+.fcf-btn-primary:hover {
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
+}
+
+.fcf-btn-primary:focus, .fcf-btn-primary.focus {
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
+    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+}
+
+.fcf-btn-lg, .fcf-btn-group-lg>.fcf-btn {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
+
+.fcf-btn-block {
+    display: block;
+    width: 100%;
+}
+
+.fcf-btn-block+.fcf-btn-block {
+    margin-top: 0.5rem;
+}
+
+input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[type="button"].fcf-btn-block {
+    width: 100%;
+}
