--- a/onepager_CSS.css
+++ b/onepager_CSS.css
@@ -100,6 +100,13 @@ ul {
 }
 
 }
+.footer {
+  background: #3d648a;
+  color: #f5f5f5;
+  padding: .7em 1em;
+  margin: 0 1%;
+}
+
 #footer {
   margin: 2em 3%;
   text-align: right;
