--- a/onepager_CSS.css
+++ b/onepager_CSS.css
@@ -1,3 +1,5 @@
+/*this is the style of the body*/
+
 body {
   color: #214466;
   background: 	#CAE1FF;
@@ -7,29 +9,21 @@ body {
   line-height: 1.6em;
   margin: 2.5em 0;
 }
-a {
-  color: #f5f5f5;
-  background: inherit;
-}
-a:hover {
-  color: #141714;
-}
-h2 {
-  font-size: 1.4em;
-}
-ul {
-  margin: 10px 0;
-  padding: 0;
-}
+
+/*put space between columns*/
 .clear {
   clear: both;
   margin: 0 0 8px 0
 }
+
+/*wraps everything on the page*/
 #wrapper {
   width: 90%;
   margin: 0 auto;
   text-align: left;
 }
+
+/*style of the logo*/
 #logo h1 {
   float: left;
   color: #214466;
@@ -38,35 +32,19 @@ ul {
   padding: 0;
   font-size: 2.4em;
 }
+
+/*for my name in the top right of the page*/
 #top {
   float: right;
   margin: 0 2em 0 0;
 }
+
+/*style of the menu*/
 #menu {
   clear: both;
-  margin: 0 2% 1em 1%;
-  padding: 7px 0 7px 0;
-  border-bottom: 1px solid #dcdb5;
-  border-top: 1px solid #dcdb5;
 }
-#menu li {
-  display: inline;
-}
-#menu a {
-  padding: 3px 15px;
-  margin: 0 3px 0 0;
-  text-decoration: none;
-  color: #808080;
-  background: inherit;
-}
-#menu a.current {
-  color: #fff;
-  background: #3d648a;
-}
-#menu a:hover {
-  background: #fff;
-  color: #444;
-}
+
+/*style of the columns*/
 .column {
   float: left;
   width: 29%;  /*works with float left to align all 3*/
@@ -76,18 +54,21 @@ ul {
   color: #f5f5f5;
   padding: 3% 1%;
 }
+
 .column h1 {
   margin: 1% 0;
   padding: 0;
   background: inherit;
   font-size: 1.5em;
 }
+
 .number {
   background: #f5f5f5;
   padding: .6% 3%;
   color: #214466;
   margin-right: 3%;
 }
+
 .half {
   float: left;
   width: 45.6%;
@@ -99,7 +80,7 @@ ul {
   font-size: 14px;
 }
 
-}
+/*style of the footer*/
 .footer {
   background: #3d648a;
   color: #f5f5f5;
@@ -111,16 +92,8 @@ ul {
   margin: 2em 3%;
   text-align: right;
 }
-#footer a {
-  color: #3d648a;
-  font-weight: bold;
-  text-decoration: none;
-}
-#footer a:hover {
-  color: #fff;
-  background: #3d648a;
-}
 
+/*style of content*/
 .content {
   height: 400px;
   text-align: center;
@@ -128,10 +101,8 @@ ul {
    background: #FF5636;
 }
 
+/*header image*/
 .content-1 {
   background-image: url(https://www.mustsee.today/wp-content/uploads/2018/10/Koopgoot-en-Lijnbaan-10-1620x1080.jpg);
   background-size: 100%;
-}
-.content {
-
 }
