--- a/layoutCss.css
+++ b/layoutCss.css
@@ -1,83 +1,94 @@
- {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial;
-    padding: 10px;
-    background: #cce7e8;
-}
-
-/* Style of the header */
-.header {
-    padding: 30px;
+.wrapper {
+    display: flex;
+    flex-flow: row wrap;
     text-align: center;
+}
+
+.wrapper > * {
+    padding: 10px;
+    flex: 1 100%;
+}
+
+nav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+
+    list-style: none;
+    margin: 0;
+    background: #4BB7CA;
+}
+
+nav a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+}
+
+nav a:hover {
+    background: #ddd;
+}
+
+
+header {
     background: #B8DCE3;
 }
 
-.header h1 {
-    font-size: 50px;
-}
-
-/* /* Style of the top navigation bar */
-.topnav {
-    overflow: hidden;
-    background-color: #4BB7CA;
-}
-
-/* Style of the topnav links */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-/* style of the Left column */
-.leftcolumn {
-    float: left;
-    width: 75%;
-}
-
-/* style of the Right column */
-.rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
-}
-
-/* There is where the content of the page is */
-.content {
-    background-color: #B8DCE3;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Style of the footer */
-.footer {
-    padding: 20px;
-    text-align: center;
+footer {
     background: #4BB7CA;
-    margin-top: 20px;
 }
 
+.main {
+    text-align: left;
+    background: #B8DCE3;
+}
 
+.aside-1 {
+    background: #B8DCE3;
+}
+
+.aside-2 {
+    background: #B8DCE3;
+}
+
+@media all and (min-width: 600px) {
+    .aside { flex: 1 0 0; }
+}
+
+@media all and (min-width: 800px) {
+    .main    { flex: 3 0px; }
+    .aside-1 { order: 1; }
+    .main    { order: 2; }
+    .aside-2 { order: 3; }
+    footer  { order: 4; }
+}
+
+@media all and (max-width: 800px) {
+    nav {
+        justify-content: space-around;
+    }
+}
+
+@media all and (max-width: 600px) {
+    nav {
+        flex-flow: column wrap;
+        padding: 0;
+    }
+    nav a {
+        text-align: center;
+        padding: 10px;
+        border-top: 1px solid rgba(255, 255, 255,0.3);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    nav li:last-of-type a {
+        border-bottom: none;
+    }
+}
+
+body {
+    padding: 2em;
+}
 
 /*the CSS for the email form, this was not made by me, credits: https://www.freecontactform.com/form-guides/html-email-form */
 #fcf-form {
