--- a/layoutCss.css
+++ b/layoutCss.css
@@ -87,7 +87,7 @@ footer {
 }
 
 body {
-    padding: 2em;
+    margin: 0;
 }
 
 /*the CSS for the email form, this was not made by me, credits: https://www.freecontactform.com/form-guides/html-email-form */
